--- a/course/dl4mt21fa/index.html
+++ b/course/dl4mt21fa/index.html
@@ -169,7 +169,7 @@
         <tr>
           <td>6</td>
           <td>W 10/13</td>
-          <td>Transformer, Distributed Training</td>
+          <td><a href="lecture6transformer.pdf">Transformer</a></td>
           <td><a href="https://proceedings.neurips.cc/paper/2017/hash/3f5ee243547dee91fbd053c1c4a845aa-Abstract.html">Vaswani
               Transformer 2017</a></td>
           <td><br />
@@ -192,8 +192,7 @@
           <td>8<br />
           </td>
           <td>W 10/20 </td>
-          <td>Monolingual Data. Pre-trained LM, ELMo, BERT, GPT, T5, Learned
-            Metric<br />
+          <td>Pre-training<br />
           </td>
           <td>Devlin 2019 BERT<br />
             Peters 2018 ELMo<br />
