adding gaitc and ccmt talk slides

--- a/teaching.html
+++ b/teaching.html
@@ -43,6 +43,9 @@
           </ul>
           <h1>Talks and Lecture</h1>
           <ul>
+            <li>CCMT 2021 Keynote: Efficient Machine Translation. [<a href="TALKS/EfficientMT-CCMT2021-leili.pdf">Slides</a>]
+            </li>
+            <li>GAITC 2021 NLP Forum Invited Talk: Speech Translation from Research to Product Innovation. [<a href="TALKS/Speech%20Translation%20-%20GAITC%20-%20Lei%20Li%202021.6.6.pdf">Slides</a>]</li>
             <li>Recent Advances in Machine Writing and Translation – Algorithms
               and Challenges. GTC-China 2020.12.19 (1hr) [<a href="TALKS/Recent%20Advances%20in%20Text%20Generation%20and%20Machine%20Translation%20-%20GTC%20China%20-%20LeiLi%20-%202020.12.19.pdf">Slides</a>]</li>
             <li><a href="TALKS/Interpretable%20Machine%20Learning%20for%20NLG%20-%20Neurips%20meetup%202020.12.06.pdf">Scalable,
