--- a/course/dl4mt21fa/index.html
+++ b/course/dl4mt21fa/index.html
@@ -179,12 +179,9 @@
           <td>7<br />
           </td>
           <td>M 10/18 </td>
-          <td>Decoding<br />
+          <td><a href="lecture7decoding.pdf">Decoding</a><br />
           </td>
-          <td>Beam Search<br />
-            Diverse Beam Search<br />
-            Top-k Sampling<br />
-            Constrained Decoding<br />
+          <td>
           </td>
           <td>Project Proposal Due </td>
         </tr>
@@ -194,9 +191,9 @@
           <td>W 10/20 </td>
           <td>Pre-training<br />
           </td>
-          <td>Devlin 2019 BERT<br />
-            Peters 2018 ELMo<br />
-            CTNMT (BERT-NMT)<br />
+          <td><a href="https://aclanthology.org/N19-1423">Devlin 2019 BERT</a><br />
+            <a href="https://aclanthology.org/N18-1202">Peters 2018 ELMo</a><br />
+            <a href="https://arxiv.org/abs/1908.05672">CTNMT (BERT-NMT)</a><br />
           </td>
           <td><br />
           </td>
