--- a/course/dl4mt21fa/index.html
+++ b/course/dl4mt21fa/index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta />
     <link rel="stylesheet" type="text/css" href="../../style/origo.css" media="all" />
     <meta name="author" content="Lei Li" />
     <title>DL4MT</title>
@@ -211,13 +212,12 @@
           <td>10<br />
           </td>
           <td>W 10/27 </td>
-          <td>Semi-supervised and Unsupervised MT<br />
-            Multilingual NMT, Pre-training, Augmentation,  </td>
-          <td>Back Translation, Dual Learning, Mirror Generative NMT<br />
-            mTransformer, <br />
-            mRASP &amp; mRASP2, <br />
-            mBART, <br />
-            Graformer<br />
+          <td><a href="lecture10semisupervised_unsupervised_nmt.pdf" ></a>Semi-supervised and Unsupervised MT</td>
+          <td><a href="https://aclanthology.org/P16-1009">Back Translation</a><br />
+            <a href="https://aclanthology.org/P16-1185">Semi-supervised MT</a><br />
+            <a href="http://arxiv.org/abs/1710.11041">Unsupervised MT, Artetxe 2018</a><br />
+            <a href="https://openreview.net/forum?id=rkYTTf-AZ">Unsupervised MT, Lample 2018 </a>
+          
           </td>
           <td><br />
           </td>
@@ -226,9 +226,10 @@
           <td>11<br />
           </td>
           <td>M 11/1 </td>
-          <td>Improving Structure Capacity, continual learning, adapter,
-            language-specific sub-network </td>
-          <td>Prune-tune, Adapter, CIAT, LaSS<br />
+          <td>Latent Generative Models for MT</td>
+          <td>VAE<br />
+            Sentence VAE<br />
+            Mirror Generative NMT<br />
           </td>
           <td><br />
           </td>
@@ -237,9 +238,12 @@
           <td>12<br />
           </td>
           <td>W 11/3 </td>
-          <td>Data mining for MT</td>
-          <td>alignment, kNN-NMT, KSTER<br />
-          </td>
+          <td>Multilingual Machine Translation</td>
+          <td>mTransformer, <br />
+            mRASP &amp; mRASP2, <br />
+            mBART, <br />
+            Graformer, <br />
+            Prune-tune, Adapter, CIAT, LaSS </td>
           <td><br />
           </td>
         </tr>
@@ -285,8 +289,9 @@
           <td>17<br />
           </td>
           <td>M 11/22 </td>
-          <td>Interactive Machine Translation, Computer-aided Translation</td>
-          <td>CAMIT, constrained decoding </td>
+          <td>Interactive Machine Translation, Computer-aided Translation, Data
+            mining for MT</td>
+          <td>CAMIT, constrained decoding, alignment, kNN-NMT, KSTER</td>
           <td><br />
           </td>
         </tr>
