--- a/course/dl4mt21fa/index.html
+++ b/course/dl4mt21fa/index.html
@@ -212,7 +212,7 @@
           <td>10<br />
           </td>
           <td>W 10/27 </td>
-          <td><a href="lecture10semisupervised_unsupervised_nmt.pdf" ></a>Semi-supervised and Unsupervised MT</td>
+          <td><a href="lecture10semisupervised_unsupervised_nmt.pdf" >Semi-supervised and Unsupervised MT</a></td>
           <td><a href="https://aclanthology.org/P16-1009">Back Translation</a><br />
             <a href="https://aclanthology.org/P16-1185">Semi-supervised MT</a><br />
             <a href="http://arxiv.org/abs/1710.11041">Unsupervised MT, Artetxe 2018</a><br />
