adding MLGSum data

--- a/resource.html
+++ b/resource.html
@@ -1,77 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-  <head>
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
-    <meta name="description" content="Lei Li" />
-    <meta name="keywords" content="machine learning deep learning natural language processing probabilistic programming" />
-    <meta name="author" content="Lei Li" />
-    <link rel="stylesheet" type="text/css" href="style/origo.css" media="all" />
-    <!--link rel="stylesheet" type="text/css" href="style/style.css" media="all" /-->
-    <title>Lei LI's Software</title>
-  </head>
-  <body class="blue light">
-    <div id="layout">
-      <ul class="menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="research.html">Research</a></li>
-        <li><a href="teaching.html">Teaching</a></li>
-        <li><a href="pubs.html">Publications</a></li>
-        <li class="active"><a href="resource.html">Resource</a></li>
-        <li><a href="leili-bio.html">Bio</a></li>
-      </ul>
-      <div class="row">
-        <div class="main col">
-          <h1>
-            Software and Toolbox
-          </h1>
-          <ul>
-            <li><a href="https://github.com/bytedance/lightseq">LightSeq</a>: A
-              High Performance Inference Library for Sequence Modelling,
-              Generation, and Machine Translation. With the custom CUDA
-              implementation, it achieves 10x speed-up over the original
-              tensorflow seq2seq package, and faster than other implementations.
-            </li>
-            <li>
-              <a href="https://github.com/bytedance/neurst">
-                NeurST
-              </a>: A toolbok with readily available models for neural machine translation and speech-to-text translation. 
-            </li>
-            <li><a href="https://bayesianlogic.github.io/">BLOG</a>: a
-              probabilistic programming language for machine learning</li>
-            <li><a href="https://github.com/lileicc/swift">Swift</a>: a compiler
-              for the probabilistic programming language BLOG.</li>
-            <li><a href="software/dynammo-r346.zip">DynaMMo</a>: learning
-              toolbox for multi-dimensional co-evolving time series. <a href="https://github.com/lileicc/dynammo">github
-                page</a></li>
-            <li><a href="software/clds-r347.zip">CLDS</a>: complex-valued linear
-              dynamical system</li>
-            <li><a href="software/plif-r345.zip">PLiF</a>: time-shift-invariant
-              feature extraction for time series </li>
-            <li><a href="software/bolero-r349.zip">BoLeRO</a>: human motion
-              capture occlution recovering</li>
-            <li><a href="paralearn/index.html">paralearn</a>: a parallel
-              algorithm for learning Markov models and linear dynamical systems
-              (i.e. Kalman filter) </li>
-            <li><a href="software/mlds-r662.zip">MLDS</a>: learning dynamical
-              model for tensor time series </li>
-          </ul>
-
-          <h1>Dataset</h1>
-          <ul>
-            <li>
-              TTNews: a dataset for Chinese document summarization. 50,000 news articles with summary for training, and 4,000 news articles for testing. 
-              [<a href="http://tcci.ccf.org.cn/conference/2018/dldoc/taskgline03.pdf">Task description</a>] [<a href="https://pan.baidu.com/s/1bppQ4z1">Training data</a>] [<a href="https://www.dropbox.com/s/luizl5rftml05nc/nlpcc_summarization_2017-2018_evaluation.zip?dl=0">Testing data and evaluation script</a>]
-              [Reports from <a href="pubs/hua2017overview.pdf">NLPCC2017</a> and <a href="pubs/li2018overview.pdf">NLPCC2018</a>]
-            </li>
-            <li>
-              CNewSum: an extended version of TTNews for Chinese document summarization. It includes 304,307 documents and human-written summaries. It includes additional adequacy-level and deducibility-level labels. [<a href="https://dqwang122.github.io/projects/CNewSum/">Project URL</a>]
-            </li>
-          </ul>
-          <p>
-            Please send me email if you find bugs or have comments!
-          </p>
-        </div>
-      </div>
-    </div>
-  </body>
-</html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en">  <head>    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />    <meta name="description" content="Lei Li" />    <meta name="keywords" content="machine learning deep learning natural language processing probabilistic programming" />    <meta name="author" content="Lei Li" />    <link rel="stylesheet" type="text/css" href="style/origo.css" media="all" />    <!--link rel="stylesheet" type="text/css" href="style/style.css" media="all" /-->    <title>Lei LI's Software</title>  </head>  <body class="blue light">    <div id="layout">      <ul class="menu">        <li><a href="index.html">Home</a></li>        <li><a href="research.html">Research</a></li>        <li><a href="teaching.html">Teaching</a></li>        <li><a href="pubs.html">Publications</a></li>        <li class="active"><a href="resource.html">Resource</a></li>        <li><a href="leili-bio.html">Bio</a></li>      </ul>      <div class="row">        <div class="main col">          <h1> Software and Toolbox </h1>          <ul>            <li><a href="https://github.com/bytedance/lightseq">LightSeq</a>: A              High Performance Inference Library for Sequence Modelling,              Generation, and Machine Translation. With the custom CUDA              implementation, it achieves 10x speed-up over the original              tensorflow seq2seq package, and faster than other implementations.            </li>            <li> <a href="https://github.com/bytedance/neurst"> NeurST </a>: A              toolbok with readily available models for neural machine              translation and speech-to-text translation. </li>            <li><a href="https://bayesianlogic.github.io/">BLOG</a>: a              probabilistic programming language for machine learning</li>            <li><a href="https://github.com/lileicc/swift">Swift</a>: a compiler              for the probabilistic programming language BLOG.</li>            <li><a href="software/dynammo-r346.zip">DynaMMo</a>: learning              toolbox for multi-dimensional co-evolving time series. <a href="https://github.com/lileicc/dynammo">github
+                page</a></li>            <li><a href="software/clds-r347.zip">CLDS</a>: complex-valued linear              dynamical system</li>            <li><a href="software/plif-r345.zip">PLiF</a>: time-shift-invariant              feature extraction for time series </li>            <li><a href="software/bolero-r349.zip">BoLeRO</a>: human motion              capture occlution recovering</li>            <li><a href="paralearn/index.html">paralearn</a>: a parallel              algorithm for learning Markov models and linear dynamical systems              (i.e. Kalman filter) </li>            <li><a href="software/mlds-r662.zip">MLDS</a>: learning dynamical              model for tensor time series </li>          </ul>          <h1>Dataset</h1>          <ul>            <li> TTNews: a dataset for Chinese document summarization. 50,000              news articles with summary for training, and 4,000 news articles              for testing. [<a href="http://tcci.ccf.org.cn/conference/2018/dldoc/taskgline03.pdf">Task
+                description</a>] [<a href="https://pan.baidu.com/s/1bppQ4z1">Training
+                data</a>] [<a href="https://www.dropbox.com/s/luizl5rftml05nc/nlpcc_summarization_2017-2018_evaluation.zip?dl=0">Testing
+                data and evaluation script</a>] [Reports from <a href="pubs/hua2017overview.pdf">NLPCC2017</a>              and <a href="pubs/li2018overview.pdf">NLPCC2018</a>] </li>            <li> CNewSum: an extended version of TTNews for Chinese document              summarization. It includes 304,307 documents and human-written              summaries. It includes additional adequacy-level and              deducibility-level labels. [<a href="https://dqwang122.github.io/projects/CNewSum/">Project
+                URL</a>] </li>            <li>MLGSum: a multilingual text summarization corpus with 1.2              million articles in 12 languages. Average length per article is              570 words. [<a href="https://dqwang122.github.io/projects/CALMS/">Project
+                URL] </a> [<a href="https://drive.google.com/file/d/1i9xfOkQ60kixj0rZ-kCo8UCo2fZ51fCY/view?usp=sharing">Data</a>]</li>          </ul>          <p> Please send me email if you find bugs or have comments! </p>        </div>      </div>    </div>  </body></html>
