adding speech translation lecture

--- a/course/dl4mt21fa/index.html
+++ b/course/dl4mt21fa/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
     <meta />
+    <meta />
     <link rel="stylesheet" type="text/css" href="../../style/origo.css" media="all" />
     <meta name="author" content="Lei Li" />
     <title>DL4MT</title>
@@ -247,7 +248,7 @@
             <a href="https://aclanthology.org/D19-1165">Serial Adapter</a> <br />
             <a href="https://arxiv.org/abs/2104.08154">Parallel adapter - CIAT</a>
             <br />
-            <a href="https://arxiv.org/abs/2105.09259">LaSS</a><br />
+            <a href="https://arxiv.org/abs/2105.09259">LaSS</a>, <a href="https://arxiv.org/abs/2012.10586">Prune-tune</a>
           </td>
           <td><br />
           </td>
@@ -256,7 +257,8 @@
           <td>13<br />
           </td>
           <td>M 11/8 </td>
-          <td><a href="wav2vec-talk-auli.pdf"> Speech Representation Learning </a> - Guest Lecture by Dr. Michael Auli from Facebook</td>
+          <td><a href="wav2vec-talk-auli.pdf"> Speech Representation Learning </a>
+            - Guest Lecture by Dr. Michael Auli from Facebook</td>
           <td><a href="https://arxiv.org/abs/1904.05862v4">Wav2vec</a>, <a href="http://arxiv.org/abs/2006.11477">wav2vec2.0</a>,
             <a href="https://arxiv.org/abs/2105.11084v2">wav2vec-U</a>.<br />
           </td>
@@ -266,21 +268,22 @@
           <td>14<br />
           </td>
           <td>W 11/10 </td>
-          <td>Pre-training for NMT, Monolingual and Multilingual</td>
-          <td> <a href="https://arxiv.org/abs/2010.03142">mRASP</a> &amp; <a href="https://arxiv.org/abs/2105.09501">mRASP2</a>
-            <br />
-            <a href="https://doi.org/10.1162/tacl_a_00343">mBART</a> <br />
-            <a href="https://arxiv.org/abs/2109.05256"> Graformer</a> <br />
-            <a href="https://arxiv.org/abs/2012.10586">Prune-tune</a> </td>
+          <td> <a href="lecture14pretrainMT.pdf"> Seq2seq Pre-training for NMT </a></td>
+          <td> <a href="https://aclanthology.org/2020.acl-main.703.pdf">BART</a>,
+            <a href="http://proceedings.mlr.press/v97/song19d/song19d.pdf">MASS</a><br />
+          </td>
           <td>Project midterm report due </td>
         </tr>
         <tr>
           <td>15<br />
           </td>
           <td>M 11/15 </td>
-          <td>Speech Translation</td>
-          <td>FAT, Wave2vec1&amp;2, Chimera, XSTNet, E2E Speech Translation,
-            LUT, COSTT, CTC</td>
+          <td> <a href="lecture14pretrainMT.pdf"> Multilingual Pre-training for NMT </a></td>
+          <td><a href="https://arxiv.org/abs/2010.03142">mRASP</a> &amp; <a href="https://arxiv.org/abs/2105.09501">mRASP2</a>
+            <br />
+            <a href="https://doi.org/10.1162/tacl_a_00343">mBART</a> <br />
+            <a href="https://arxiv.org/abs/2109.05256"> Graformer</a> <br />
+          </td>
           <td><br />
           </td>
         </tr>
@@ -288,8 +291,8 @@
           <td>16<br />
           </td>
           <td>W 11/17 </td>
-          <td>Advanced vocabulary and embedding learning </td>
-          <td>VOLT, KerBS </td>
+          <td> <a href="lecture16speechtranslation.pdf"> Speech Translation (1) </a></td>
+          <td><a href="https://arxiv.org/abs/2009.09737">COSTT</a>, <a href="https://dl.acm.org/doi/10.1145/1143844.1143891">CTC</a></td>
           <td><br />
           </td>
         </tr>
@@ -297,10 +300,8 @@
           <td>17<br />
           </td>
           <td>M 11/22 </td>
-          <td>Speed-up inference: Parallel Generation, Hardware acceleration for
-            NMT </td>
-          <td>NAT, flowSeq, CMLM, PNAT, GLAT, <br />
-            LightSeq, TurboTranformer </td>
+          <td> <a href="lecture16speechtranslation.pdf"> Speech Translation (2) </a></td>
+          <td>Chimera, XSTNet, LUT, FAT</td>
           <td><br />
           </td>
         </tr>
@@ -308,9 +309,11 @@
           <td>18<br />
           </td>
           <td>W 11/24 </td>
-          <td>Interactive Machine Translation, Computer-aided Translation, Data
+          <td>Advanced vocabulary and embedding learning <br />
+            Interactive Machine Translation, Computer-aided Translation, Data
             mining for MT</td>
-          <td>CAMIT, constrained decoding, alignment, kNN-NMT, KSTER<br />
+          <td>VOLT, KerBS <br />
+            CAMIT, constrained decoding, alignment, kNN-NMT, KSTER<br />
           </td>
           <td><br />
           </td>
@@ -319,8 +322,12 @@
           <td>19<br />
           </td>
           <td>M 11/29 </td>
-          <td>Applications to other tasks, drug discovery, material </td>
-          <td>VAE, RationalRL, MARS, GA, CGMH, VTM </td>
+          <td>Speed-up inference: Parallel Generation, Hardware acceleration for
+            NMT <br />
+            Applications to other tasks, drug discovery, material </td>
+          <td>NAT, flowSeq, CMLM, PNAT, GLAT, <br />
+            LightSeq, TurboTranformer <br />
+            VAE, RationalRL, MARS, GA, CGMH, VTM </td>
           <td><br />
           </td>
         </tr>
