--- a/teaching.html
+++ b/teaching.html
@@ -23,29 +23,33 @@
         <div class="main col">
           <h1>Teaching</h1>
           <ul>
-            <li>
-              <a href="course/dl4mt21fa/index.html">Deep Learning for Machine Translation (Fall 2021)</a>
+            <li><a href="course/mldl22w/index.html"> CS165B Machine Learning (Winter 2022) - focus on deep
+              learning</a><br />
             </li>
+            <li><a href="course/dl4mt21fa/index.html">CS291K Deep Learning for
+                Machine Translation (Fall 2021)</a> </li>
           </ul>
           <h1>Tutorial</h1>
           <ul>
-            <li><a href="https://sites.cs.ucsb.edu/~lilei/TALKS/2021-ACL/">ACL2021 Tutorial: Pre-training methods for Neural Machine Translation</a></li>
+            <li><a href="https://sites.cs.ucsb.edu/%7Elilei/TALKS/2021-ACL/">ACL2021
+                Tutorial: Pre-training methods for Neural Machine Translation</a></li>
             <li><a href="TALKS/2019-EMNLP">EMNLP 2019 Tutorial on Discreteness
-              in NLP</a>. </li>
+                in NLP</a>. </li>
             <li> <a href="https://xxx">CCF-ADL107/NLPCC 2019 Tutorial on Deep
                 Generative Models for Text Generation</a>. Dunhuang, China,
               2019. by Hao Zhou and Lei Li.</li>
             <li>CCF-ADL/NLPCC 2016 Tutorial on Deep Learning for Question
-                Answering. Kunming, China, December 2020. [<a href="TALKS/Deep%20Learning%20for%20Answering%20Questions%20-%20leili%20-%20NLPCC%20-%20ADL%202016.pdf">Slides</a>]</li>
+              Answering. Kunming, China, December 2020. [<a href="TALKS/Deep%20Learning%20for%20Answering%20Questions%20-%20leili%20-%20NLPCC%20-%20ADL%202016.pdf">Slides</a>]</li>
             <li>2014 PPAML Summer School, <a href="http://bayesianlogic.github.io/download/BLOG-tutorial-2014.pdf">lecture
-                  on BLOG</a> . </li>
+                on BLOG</a> . </li>
             <li> <a href="TALKS/2010-KDD/">KDD 2010 Tutorial on Time Series</a></li>
           </ul>
           <h1>Talks and Lecture</h1>
           <ul>
             <li>CCMT 2021 Keynote: Efficient Machine Translation. [<a href="TALKS/EfficientMT-CCMT2021-leili.pdf">Slides</a>]
             </li>
-            <li>GAITC 2021 NLP Forum Invited Talk: Speech Translation from Research to Product Innovation. [<a href="TALKS/Speech%20Translation%20-%20GAITC%20-%20Lei%20Li%202021.6.6.pdf">Slides</a>]</li>
+            <li>GAITC 2021 NLP Forum Invited Talk: Speech Translation from
+              Research to Product Innovation. [<a href="TALKS/Speech%20Translation%20-%20GAITC%20-%20Lei%20Li%202021.6.6.pdf">Slides</a>]</li>
             <li>Recent Advances in Machine Writing and Translation – Algorithms
               and Challenges. GTC-China 2020.12.19 (1hr) [<a href="TALKS/Recent%20Advances%20in%20Text%20Generation%20and%20Machine%20Translation%20-%20GTC%20China%20-%20LeiLi%20-%202020.12.19.pdf">Slides</a>]</li>
             <li><a href="TALKS/Interpretable%20Machine%20Learning%20for%20NLG%20-%20Neurips%20meetup%202020.12.06.pdf">Scalable,
@@ -70,7 +74,6 @@
               Scientists and Engineers Forum: Deep Learning – Towards More
               Intelligent Machines.<br />
             </li>
-
             <li> 2013 TAMU <a href="http://cesg.tamu.edu/seminar/fishbowl-teleseminar-fast-algorithms-for-mining-co-evolving-time-series/">Fish
                 Bowl Seminar</a> </li>
             <li> Parsimonious Linear Fingerprinting for time series, Machine
